# AI-Enabled-PMO-Portfolio-Delivery-Management

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
assurance/: DEFECT_REGISTER.csv  FINAL_AUDIT.md  GO_NO_GO_REPORT.md  RELEASE_MANIFEST.md  TEST_EVIDENCE.md
career/: cv-project-bullets.md  honest-claims-boundary.md  interview-questions-and-answers.md  interview-walkthrough.md  linkedin-project-description.md  portfolio-evidence-map.md
config/: ai_config.yaml  field_mapping.yaml  rag_thresholds.yaml  settings.yaml  status_mapping.yaml  validation_rules.yaml
docs/: DATA_MODEL.md  IDENTIFIER_SYSTEM.md  SHAREPOINT_GUIDANCE.md  SOURCE_REGISTER.md  SYNTHETIC_DATA_SPEC.md  VALIDATION_RULES.md
planning/: ACCEPTANCE_CRITERIA.md  AGENT_WORK_PACKAGES.md  APPROVAL_REQUIRED.md  DECISION_LOG.md  MASTER_CHECKLIST.md  PLAN_CRITIQUE.md  PROJECT_CHARTER.md  PROJECT_STATE.json  REPOSITORY_BLUEPRINT.md  REQUIREMENTS_REGISTER.csv  REQUIREMENTS_TRACEABILITY_PLAN.csv  RESEARCH_BACKLOG.md  REVISED_MASTER_PLAN.md  RISK_REGISTER.md  SESSION_LOG.md  TEST_STRATEGY.md  TOKEN_AND_MODEL_HANDOFF.md
research/: ai_summarisation.md  claim-evidence-map.csv  duplicate_detection.md  jira_data_formats.md  output_libraries.md  pmo_frameworks.md  reporting_standards.md  research-summary.md  source-register.csv
src/: __init__.py
templates/: one_page_view.html
tests/: conftest.py  test_ai_adapter.py  test_ai_validation.py  test_dashboard.py  test_data_quality.py  test_duplicates.py  test_excel_output.py  test_importers.py  test_metrics.py  (+5 more)
(+79 files in other folders)
